# ohos_scrcpy

./: .gitignore  CODE_WIKI.md  build.ps1  test_control.py
client/: CMakeLists.txt
client/include/: hdc_manager.h  input_handler.h  renderer.h  tcp_client.h  toolbar.h  video_decoder.h
client/src/: hdc_manager.c  input_handler.c  main.c  renderer.c  tcp_client.c  toolbar.c  video_decoder.cpp
common/: log.h  protocol.h
docs/: operation-guide.md
scripts/: build_client.sh  quick_start.sh  start.bat
server/: BUILD.gn  CMakeLists.txt  build_arm64.sh  build_server.sh  ohos_scrcpy_server.cfg
server/include/: input_injector.h  screen_capture.h  tcp_server.h  video_encoder.h
server/src/: input_injector.c  main.c  screen_capture.c  tcp_server.c  video_encoder.c
server/stubs/: input_injector.h  screen_capture.h  video_encoder.h
tools/getevent/: build_arm64.sh  getevent.c
tools/getevent/build_arm64/: getevent
